<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016 Martin Pfeffer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Truth Or Dare</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_subtitle_game">Game</string>
    <string name="instruction">Instruction</string>
    <string name="two_player">Two Players</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="navigation_subtitle_config">Configuration</string>
    <string name="settings">Settings</string>
    <string name="restore">Restore</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="instruction_content">Make sure to add database in \"Downloads\"-folder…</string>
    <string name="radio_male">male</string>
    <string name="radio_female">female</string>
    <string name="playerX">1. Player</string>
    <string name="player">Player</string>
    <string name="start_game">START GAME</string>
    <string name="name">Name</string>
    <string name="jokers">Jokers</string>
    <string name="touch_twice_to_close">Touch BACK again to exit</string>
    <string name="add_player">Add player</string>
    <string name="delete_player">Delete player</string>
    <string name="data_missing">Data is missing</string>
    <string name="surname">Surname</string>
    <string name="truth">Truth</string>
    <string name="dare">Dare</string>
    <string name="rb_joker">Joker</string>
    <string name="rb_impossible">impossible</string>
    <string name="rb_done">done</string>
    <string name="ok">OK</string>
    <string name="apply">Apply</string>
    <string name="reads_the_question">reads the question</string>
    <string name="truth_or_dare">Truth or dare</string>
    <string name="dlg_impossible_title">Impossible task</string>
    <string name="dlg_impossible_msg">Confirmed everyone that this task is impossible?</string>
    <string name="warning">Warning</string>
    <string name="dlg_game_is_running_msg">Game is currently running. Are you sure you want to leave?</string>
    <string name="select_action">Select action</string>
    <string name="tell">tell</string>
    <string name="please_read_the_question">please read the question.</string>
    <string name="what_to_do">what to do.</string>
    <string name="start_a_game">Start a game!</string>
    <string name="game_is_running">Round:</string>
    <string name="toast_swipe_to_remove">Swipe to remove</string>
    <string name="at_least_two_players">Set at least 2 players</string>

    <string name="recycler_view_player_counter">%1$d. Player</string>
    <string name="round_counter" translatable="false">#%1$d</string>
    <string name="players">Players</string>
    <string name="pref_cat_main">Main</string>
    <string name="AP_TOUCH_TWICE_TO_EXIT" translatable="false">double_touch_exit</string>
    <string name="pref_title_touch_twice_to_exit">Touch twice to exit</string>
    <string name="pref_sum_touch_twice_to_exit">Touch the BACK button twice, to close the app</string>
    <string name="AP_BUILD_VERSION" translatable="false">build_version</string>
    <string name="build_version" translatable="false">Build Version</string>
    <string name="empty" translatable="false" />
    <string name="AP_EXPORT" translatable="false">ap_export</string>
    <string name="pref_title_export_to_sd">Export to SD card</string>
    <string name="pref_summary_export_to_sd">Stores the database in XML-format on your device</string>
    <string name="AP_IMPORT_FROM_WEB" translatable="false">ap_import_from_web</string>
    <string name="AP_DB_WIPE_PLAYER" translatable="false">ap_db_wipe_player</string>
    <string name="pref_title_import_from_web">Import from web</string>
    <string name="pref_summary_import_from_web">Load new datasets from the internet. They will be stored automatically in your database.</string>
    <string name="pref_title_db_wipe_player">Wipe database</string>
    <string name="pref_summary_db_wipe_player">Wipes the players table</string>
    <string name="card_is_replayed_by_player">Card is replayed by player</string>
    <string name="dlg_title_cry_4_help">Cry4Help</string>
    <string name="Cry4Help">Cry4Help</string>
</resources>
