<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016 Martin Pfeffer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_cat_main">

        <CheckBoxPreference
            android:key="@string/AP_TOUCH_TWICE_TO_EXIT"
            android:title="@string/pref_title_touch_twice_to_exit"
            android:summary="@string/pref_sum_touch_twice_to_exit"/>

        <Preference
            android:key="@string/AP_EXPORT"
            android:title="@string/pref_title_export_to_sd"
            android:summary="@string/pref_summary_export_to_sd"/>

        <Preference
            android:key="@string/AP_IMPORT_FROM_WEB"
            android:title="@string/pref_title_import_from_web"
            android:summary="@string/pref_summary_import_from_web"/>

        <Preference
            android:key="@string/AP_DB_WIPE_PLAYER"
            android:title="@string/pref_title_db_wipe_player"
            android:summary="@string/pref_summary_db_wipe_player"/>

        <Preference
            android:key="@string/AP_BUILD_VERSION"
            android:title="@string/build_version"
            android:summary="@string/empty"/>

    </PreferenceCategory>

</PreferenceScreen>