<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Martin Pfeffer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_reader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:layout_marginTop="32dp"
            android:gravity="center"/>

    </LinearLayout>

    <RadioGroup
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group_action"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="5"
        >

        <RadioButton
            android:id="@+id/rb_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_done"
            android:checked="true"
            android:layout_weight="1"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/rb_joker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_joker"
            android:layout_weight="1"
            android:gravity="center"/>

        <RadioButton
            android:id="@+id/rb_impossible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_impossible"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"/>

    </RadioGroup>

    <FrameLayout
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="6"
        android:clickable="false">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cry 4 Help"
            android:id="@+id/btn_cry_4_help"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:layout_weight="6">

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/apply"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>