<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 Martin Pfeffer
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/playerX"
        android:id="@+id/tv_player_number"
        android:padding="@dimen/default_conent_padding"/>

    <android.support.v7.widget.CardView
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/grey_700"
        android:foregroundGravity="center_vertical"
        android:id="@+id/cv">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_conent_padding"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:ems="10"
                    android:id="@+id/et_name"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <EditText
                    android:layout_width="52dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/jokers"
                    android:ems="10"
                    android:id="@+id/et_jokers"
                    android:gravity="center"/>
            </LinearLayout>

            <include
                layout="@layout/gender_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:id="@+id/spacer"
        android:layout_width="fill_parent"
        android:layout_height="8dp">
    </FrameLayout>

</LinearLayout>